scoring datastructure templating done over weekend

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 ### The Political Scorecard Project
 
 The political scorecard is meant to be a free, open source, and low effort self-hostable method for individuals
-and organizations to host and collaborate on creating data-oriented voting systems.  
+and organizations to host and collaborate on creating data-oriented voting systems for accountable politics and
+policy development.
 
 This is to provide a free baseline method of accountability for ensuring that political and business actions and policies have a clear data-oriented and interdisciplinary 'intent' defined in a way that is very context specific, and accounts for the differences in world-views in the people participating by allowing them to utilize competing logic systems and terms, with the intent of tracing credibility of groups and voters participating in refinement throughout the process.
